@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.3"
-#define public MagickPackageVersionAddendum ".020080509"
+#define public MagickPackageVersionAddendum ".020080510"
 #define public MagickPackageReleaseDate "unreleased"
