@@ -327,6 +327,17 @@ fi
 AC_SUBST(LFS_CPPFLAGS)
 
 #
+# Determine options necessary to enable OpenMP support
+#
+# Sets Set the OPENMP_CFLAGS / OPENMP_CXXFLAGS / OPENMP_FFLAGS
+# variable to these options.
+AC_OPENMP([C])
+CFLAGS="$OPENMP_CFLAGS $CFLAGS"
+CXXFLAGS="$OPENMP_CXXFLAGS $CXXFLAGS"
+LDFLAGS="$LDFLAGS $OPENMP_CFLAGS"
+AC_SUBST(OPENMP_CFLAGS)
+
+#
 # Configure libtool & libltdl
 #
 
