@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-05-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> configure.ac, magick/resize.c, PerlMagick/Makefile.PL.in: Added
+        OpenMP support for parallizing a task across multiple cores.
+
+</UL>
+<p>
 2008-05-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
@@ -51,7 +59,6 @@
 
 <UL>
   <LI> libtool: Update to libtool 1.2.4.
-
   <LI> magick/magick.h (MagickInfo): Store string attributes as 'const
         char *' to statically allocated data rather than as heap allocated
         strings.  THIS IS AN INTERFACE CHANGE.  Using a coder written to
